# kafka-rust

./: .env  Cargo.toml  Readme.md  docker-compose.yaml
src/: create_topic.rs  main.rs  publisher.rs  subscriber.rs
