[package]
name = "kafka-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create-topic"
path = "src/create_topic.rs"

[[bin]]
name = "subcriber"
path = "src/subcriber.rs"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[dependencies]
dotenv = "0.15.0"
rdkafka = { version = "0.37.0", features = ["tokio"]}
tokio = { version = "1", features = ["full"] }
