[package]
name = "kafka-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create-topic"
path = "src/create_topic.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[dependencies]
dotenv = "0.15.0"
rdkafka = { version = "0.37.0", features = ["tokio"]}
tokio = { version = "1.45.0", features = ["full"] }
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
